[package]
name = "rstodo"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
description = "A simple command-line todo application"
readme = "README.md"
homepage = "https://github.com/yourusername/todo-cli"
repository = "https://github.com/yourusername/todo-cli"
keywords = ["cli", "todo", "productivity", "task-management"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"